site/styles/_cta-buttons.scss
/* stylelint-disable selector-max-compound-selectors, max-nesting-depth */
.cta-buttons {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin-bottom: 8px;

  @include media-breakpoint-up(xs) {
    flex-direction: row;
    flex-wrap: wrap;
  }

  > *:not(.extra-buttons) {
    animation: fadein 2s;
  }

  .s72-pricing-button-container {
    display: grid;
    gap: 16px;
    grid-template-columns: 1fr 1fr;

    @include media-breakpoint-up(xs) {
      grid-template-columns: none;
    }

    > * {
      align-self: start;
    }

    // If there is only one button, make it full width on one row.
    :only-child {
      grid-column: 1 / 3;
      grid-row: 1;
    }

    // If there are two buttons...
    :first-child:nth-last-child(2) {
      // And the first button is the subscribe button:
      // Put the subscribe button in the first row full width.
      &.s72-subscribe {
        grid-column: 1 / 3;
        grid-row: 1;

        @include media-breakpoint-up(xs) {
          grid-column: auto;
        }

        // And put the other button in the second row full width.
        + .s72-btn-purchase,
        + .s72-btn-rent {
          grid-column: 1 / 3;
          grid-row: 2;

          @include media-breakpoint-up(xs) {
            grid-column: auto;
            grid-row: 1;
          }
        }
      }

      // And the first button is the buy button
      // Put the buy button in the first column, first row.
      &.s72-btn-purchase {
        grid-column: 1 / 2;
        grid-row: 1;

        @include media-breakpoint-up(xs) {
          grid-column: auto;
        }

        // And put the rent button in the second column, first row.
        + .s72-btn-rent {
          grid-column: 2 / 3;
          grid-row: 1;

          @include media-breakpoint-up(xs) {
            grid-column: auto;
          }
        }
      }
    }

    // If there are three buttons...
    :first-child:nth-last-child(3) {
      // Put the subscribe button in the first row full width.
      &.s72-subscribe {
        grid-column: 1 / 3;
        grid-row: 1;

        @include media-breakpoint-up(xs) {
          grid-column: auto;
        }

        // Put the buy button in the first column, second row.
        ~ .s72-btn-purchase {
          grid-column: 1 / 2;
          grid-row: 2;

          @include media-breakpoint-up(xs) {
            grid-column: auto;
            grid-row: 1;
          }
        }

        // And put the rent button in the second column, second row.
        ~ .s72-btn-rent {
          grid-column: 2 / 3;
          grid-row: 2;

          @include media-breakpoint-up(xs) {
            grid-column: auto;
            grid-row: 1;
          }
        }
      }
    }

    .s72-btn {
      white-space: nowrap;
      width: 100%;

      @include media-breakpoint-up(xs) {
        width: auto;
      }

      &:nth-child(2) {
        margin: 0; // RELISH OVERRIDE.
      }
    }
  }

  s72-play-button {
    .s72-btn-play {
      margin: 0;
      min-width: 140px;
      padding: 6px 12px;
      width: 100%;
    }

    .s72-btn-play-icon {
      display: none;
    }

    .verb {
      font-size: 1rem;
    }
  }

  .s72-btn-can-be-watched {
    min-width: 140px;
    padding: 6px 12px;

    .padder {
      display: none;
    }

    .s72-btn-can-be-watched-label {
      font-size: 1rem;
      font-weight: 400;
    }
  }

  .extra-buttons {
    align-items: center;
    display: grid;
    gap: 16px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    justify-items: center;
    padding: 0 36px;

    @include media-breakpoint-up(xs) {
      grid-template-columns: min-content min-content min-content;
      padding: 0;
    }

    > * {
      align-self: start;
      animation: fadein 2s;
    }

    /*#region ICON HACKS.  TODO: CLEAN THIS MESS UP! */
    // This region exists to override styles for the trailer button, wishlist button, and share modal button.
    // Once the new icons have been committed to core-template, this region should be deleted from this file,
    // and the new CSS for these icons should live in _buttons.scss (probably).
    .s72-btn-play {
      background: transparent;
      border: 0;
      height: 42px;
      margin: 0;
      padding: 0;
      width: 42px;

      @include hover-focus {
        background: transparent;

        circle {
          fill: var(--primary);
          stroke: var(--primary);
          stroke-width: 3px;
        }

        path {
          fill: #000;
          stroke: #000;
        }
      }

      circle {
        fill: transparent;
        stroke: var(--primary);
        stroke-width: 3px;
      }

      path {
        fill: var(--body-color);
        stroke: var(--body-color);
      }

      .verb {
        display: none;
      }
    }

    .s72-userwishlist-buttons {
      .s72-btn-wishlist {
        height: 42px;
        margin: 0;
        padding: 0;
        width: 42px;
      }

      i {
        margin: 0;
        padding: 0;
      }

      span {
        font-size: 0;
      }
    }

    .social-media-buttons {
      .s72-btn {
        border: 0;
        height: 42px;
        padding: 0;
        width: 42px;
      }
    }
    /*#endregion */
  }
}
/* stylelint-enable selector-max-compound-selectors, max-nesting-depth */

